# OW-AI-cyber-bio-actions-eval

./: Makefile  README.md  eval_runs.db  pyproject.toml
app/: app.py
notebooks/: 00_paper_visuals.ipynb  01_paper_results.ipynb  02_create_tool_dataset.ipynb  test_tool_usage.ipynb
scripts/: run_eval.py  run_vllm_and_test.sh  setup.sh
src/: __init__.py  benchmark_eval.py  benchmark_runner.py  dataset_formatter.py  repository.py  tool_usage_eval.py
src/scenarios/: cyber.py  decision_making.py
src/tools/: __init__.py  bio_evodiff_tools.py  bio_foundational_tools.py  bio_reconnaissance_tools.py  bio_wmdp_procurement_tools.py  bio_wmdp_tools.py  cyber_cloud_tools.py  cyber_exploit_tools.py  cyber_foundational_tools.py  cyber_reconnaissance_tools.py  decision_making_tools.py
